--- a/main.css
+++ b/main.css
@@ -4,6 +4,7 @@ body {
    font-size: 14px;
    color: #383838;
    overflow-x: hidden;
+   overflow-y: scroll;
 }
 
 .cat-label {
@@ -19,4 +20,65 @@ body {
   font-family: Nunito;
   font-size: 14px;
   color: #383838;
+}
+
+.mode-icon {
+  width: 4vh;
+  height: 4vh;
+  border-radius: 50%;
+  margin-bottom: 1vh;
+  text-align: center;
+}
+
+
+.fa-code, .fa-pen {
+  padding-top: 1vh;
+}
+
+
+.mode {
+
+  -webkit-transition: opacity .5s ease-in;
+  -moz-transition: opacity .5s ease-in;
+  -ms-transition: opacity .5s ease-in;
+  -o-transition: opacity .5s ease-in;
+  transition: opacity .5s ease-in;
+  padding: 15px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+}
+
+#timeline svg {
+  background-color: white
+}
+
+#ZoomContainer {
+  pointer-events: none;
+}
+
+.img-container {
+  display: flex;
+  justify-content: center;
+  width: 75%;
+  margin: auto;
+}
+
+.img-container img {
+  max-height:90vh;
+  width: auto;
+}
+
+.inactive .zoom-container {
+  pointer-events: none;
+}
+
+
+#mode-toggle {
+  font-size: 18px;
+  position: fixed;
+  z-index: 999;
+  top: 10px;
+  right: 15px;
 }
