--- a/main.css
+++ b/main.css
@@ -28,12 +28,23 @@ body {
   border-radius: 50%;
   margin-bottom: 1vh;
   text-align: center;
+  font-size: 28px;
+}
+
+.mode-icon:hover {
+  cursor: pointer;
 }
 
 
-.fa-code, .fa-pen {
+.fa-code, .fa-pen, .fa-question-circle{
   padding-top: 1vh;
 }
+
+.fa-question-circle:hover {
+  color: rgb(236,12,41);
+}
+
+
 
 
 .mode {
@@ -81,4 +92,26 @@ body {
   z-index: 999;
   top: 10px;
   right: 15px;
+}
+
+.about-modal-content {
+  padding: 3vh;
+  position: relative;
+}
+
+#about-blurb {
+  padding: 2vh;
+}
+
+.about-modal-content #close-modal {
+    position: absolute;
+    top: 2vh;
+    right: 2vh;
+    font-size: 25px;
+    color: #646464;
+}
+
+.about-modal-content #close-modal:hover {
+      cursor: pointer;
+      color: black;
 }
